# kmsroots

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  config-env.sh  meson.build  meson_options.txt
docs/: api.rst  buffer.rst  build.rst  conf.py  dma-buf.rst  drm-node.rst  gltf-loader.rst  index.rst  input.rst  meson.build  pixel-format.rst  requirements.txt  session.rst  shader.rst  vulkan.rst  wclient.rst  xclient.rst
examples/: clock.c  meson.build
examples/X11/: main.c
examples/common/: vulkan-common.h  wclient-common.h
examples/kms/: double-buffer-atomic-modeset.c  main.c  meson.build  model-load.c  simple-vk-drm.c  spin-rectangle.c  texture-mapping.c  triangle-index.c  triangle.c
examples/shaders/: meson.build  model-load-shader.frag  model-load-shader.vert  spin-rectangle-shader.frag  spin-rectangle-shader.vert  texture-mapping-shader.frag  texture-mapping-shader.vert  triangle-shader.frag  triangle-shader.vert
examples/textures/: meson.build
examples/wayland/: compositor.c  main.c  meson.build  model-load.c  shm-buffer.c  spin-rectangle.c  texture-mapping.c  triangle-index.c  triangle.c  wayland-client-main.c  wayland-client-vk.c  wayland-compositor-main.c
examples/xcb/: main.c  meson.build  model-load.c  spin-rectangle.c  texture-mapping.c  triangle-index.c  triangle.c
include/: buffer.h  common.h  dma-buf.h  drm-node.h  gltf-loader.h  input.h  kms-node.h  kms.h  meson.build  pixel-format.h  sd-dbus.h  session.h  shader.h  utils.h  vulkan.h  wclient.h  wserver.h  xcb-client.h  xclient.h
include/renderers/: underview.h
src/: buffer.c  dma-buf.c  drm-node.c  gltf-loader.c  input.c  kms-node.c  kms.c  meson.build  pixel-format.c  sd-dbus.c  session.c  shader.c  utils.c  vulkan.c  wayland-client.c  wayland-server.c  wclient.c  wserver.c  xcb-client.c  xclient.c
src/renderers/: underview.c
tests/: gltf-file-loading.c  meson.build  shader-buffer-load.c  shader-file-load.c  simple-vk-kms.c
