option('kms',
       type: 'feature', value: 'disabled',
       description: 'Build DRM/KMS/GBM backend')

option('sd-bus',
       type: 'feature', value: 'disabled',
       description: 'Build with systemd dbus API if option enabled')

option('xcb',
       type: 'feature', value: 'disabled',
       description : 'Build xcb wrapper api')

option('wayland',
       type: 'feature', value: 'disabled',
       description: 'Build wayland client API')

option('wayland-compositor',
       type: 'feature', value: 'disabled',
       description: 'Build wlroots based compositing api with custom out-of-tree renderer')

option('shaderc',
       type: 'feature', value: 'disabled',
       description: 'Enable/disable google shaderc')

option('examples',
      type: 'boolean', value: 'true',
      description: 'Build examples')

option('gpu',
       type: 'combo', value: 'discrete',
       choices: ['integrated', 'discrete', 'cpu'],
       description: 'Select VkPhysicalDeviceType to use in examples')
